fix: button layout bug

--- a/src/components/styles/homePage.module.scss
+++ b/src/components/styles/homePage.module.scss
@@ -21,7 +21,7 @@
   }
 }
 
-.sidebarInner {
+.pageInner {
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -40,8 +40,11 @@
 }
 
 .buttonsWrapper {
+  position: absolute;
   display: flex;
   flex-direction: column;
+  bottom: 0;
+  margin-bottom: 24px;
   max-width: 300px;
   width: calc(100% - 24px);
   gap: 8px;
